fix: build issue

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install",
-    "prebuild": "yarn format && yarn lint && yarn test",
+    "prebuild": "yarn format && yarn lint",
     "commit": "git-cz",
     "postinstall": "npx husky install",
     "changelog": "conventional-changelog --preset angular --infile CHANGELOG.md --same-file --release-count 0"
