--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "eslint --fix .",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
     "prepare": "husky install",
-    "prebuild": "yarn format && yarn lint && yarn test",
+    "prebuild": "yarn format && yarn lint",
     "commit": "git-cz",
     "postinstall": "npx husky install",
     "changelog": "conventional-changelog --preset angular --infile CHANGELOG.md --same-file --release-count 0"
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
     "react-i18next": "^11.18.5",
+    "react-icons": "^4.10.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "styled-components": "^6.0.7",
