--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hookform/resolvers": "^3.3.0",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-table": "^7.7.15",
     "axios": "^1.4.0",
     "framer-motion": "^7.2.1",
     "i18next": "^21.9.1",
@@ -45,6 +46,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
+    "react-table": "^7.8.0",
     "styled-components": "^6.0.7",
     "yup": "^0.32.11"
   },
