--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,20 @@
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
-      "~/*": ["./*"]
+      "@soaltee-loyalty/assets/*": ["assets/*"],
+      "@soaltee-loyalty/hooks/*": ["hooks/*"],
+      "@soaltee-loyalty/schema/*": ["schema/*"],
+      "@soaltee-loyalty/components/*": ["components/*"],
+      "@soaltee-loyalty/pages/*": ["pages/*"],
+      "@soaltee-loyalty/providers/*": ["providers/*"],
+      "@soaltee-loyalty/routes/*": ["routes/*"],
+      "@soaltee-loyalty/service/*": ["service/*"],
+      "@soaltee-loyalty/theme/*": ["theme/*"],
+      "@soaltee-loyalty/translations/*": ["translations/*"],
+      "@soaltee-loyalty/interface/*": ["interface/*"],
+      "@soaltee-loyalty/utility/*": ["utility/*"]
     },
     "allowSyntheticDefaultImports": true,
     "strict": true,
