--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 *.md
+CHANGELOG.md*
 
 node_modules
 dist
@@ -24,5 +25,3 @@ dist-ssr
 *.sln
 *.sw?
 bin
-
-CHANGELOG.md
