--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@soaltee-loyalty/hooks/*": ["hooks/*"],
       "@soaltee-loyalty/schema/*": ["schema/*"],
       "@soaltee-loyalty/components/*": ["components/*"],
+      "@soaltee-loyalty/constant/*": ["constant/*"],
       "@soaltee-loyalty/pages/*": ["pages/*"],
       "@soaltee-loyalty/providers/*": ["providers/*"],
       "@soaltee-loyalty/routes/*": ["routes/*"],
