--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react-table": "^7.7.15",
     "axios": "^1.4.0",
+    "esbuild-plugins-node-modules-polyfill": "^1.6.0",
     "framer-motion": "^7.2.1",
     "i18next": "^21.9.1",
     "js-cookie": "^3.0.5",
@@ -47,6 +48,7 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.15.0",
     "react-table": "^7.8.0",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "styled-components": "^6.0.7",
     "yup": "^0.32.11"
   },
