--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next": "^21.9.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
+    "jwt-decode": "^3.1.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
