--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,20 +10,20 @@
     "esModuleInterop": false,
     "baseUrl": "./src",
     "paths": {
-      "@soaltee-loyalty/assets/*": ["assets/*"],
-      "@soaltee-loyalty/hooks/*": ["hooks/*"],
-      "@soaltee-loyalty/schema/*": ["schema/*"],
-      "@soaltee-loyalty/components/*": ["components/*"],
-      "@soaltee-loyalty/constant/*": ["constant/*"],
-      "@soaltee-loyalty/pages/*": ["pages/*"],
-      "@soaltee-loyalty/providers/*": ["providers/*"],
-      "@soaltee-loyalty/routes/*": ["routes/*"],
-      "@soaltee-loyalty/service/*": ["service/*"],
-      "@soaltee-loyalty/theme/*": ["theme/*"],
-      "@soaltee-loyalty/translations/*": ["translations/*"],
-      "@soaltee-loyalty/interface/*": ["interface/*"],
-      "@soaltee-loyalty/utility/*": ["utility/*"],
-      "@soaltee-loyalty/userPages/*": ["userPages/*"]
+      "@src/assets/*": ["assets/*"],
+      "@src/hooks/*": ["hooks/*"],
+      "@src/schema/*": ["schema/*"],
+      "@src/components/*": ["components/*"],
+      "@src/constant/*": ["constant/*"],
+      "@src/pages/*": ["pages/*"],
+      "@src/providers/*": ["providers/*"],
+      "@src/routes/*": ["routes/*"],
+      "@src/service/*": ["service/*"],
+      "@src/theme/*": ["theme/*"],
+      "@src/translations/*": ["translations/*"],
+      "@src/interface/*": ["interface/*"],
+      "@src/utility/*": ["utility/*"],
+      "@src/userPages/*": ["userPages/*"]
     },
     "allowSyntheticDefaultImports": true,
     "strict": true,
