--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.4",
     "react-table": "^7.8.0",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "styled-components": "^6.0.7",
