--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hookform/resolvers": "^3.3.0",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-scroll": "^1.8.7",
     "@types/react-table": "^7.7.15",
     "axios": "^1.4.0",
     "esbuild-plugins-node-modules-polyfill": "^1.6.0",
@@ -48,6 +49,7 @@
     "react-icons": "^4.10.1",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.15.0",
+    "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
     "react-table": "^7.8.0",
     "rollup-plugin-polyfill-node": "^0.12.0",
