--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
     "react-table": "^7.8.0",
+    "recharts": "^2.8.0",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "styled-components": "^6.0.7",
     "yup": "^0.32.11"
