--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
+    "@ckeditor/ckeditor5-build-classic": "^39.0.2",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.0",
+    "@types/draft-js": "^0.11.12",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-scroll": "^1.8.7",
     "@types/react-table": "^7.7.15",
     "axios": "^1.4.0",
+    "draft-js": "^0.11.7",
     "esbuild-plugins-node-modules-polyfill": "^1.6.0",
     "framer-motion": "^10.16.2",
     "i18next": "^21.9.1",
@@ -42,6 +47,7 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
