--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@types/draft-js": "^0.11.12",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-scroll": "^1.8.7",
     "@types/react-table": "^7.7.15",
     "axios": "^1.4.0",
@@ -44,8 +44,10 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-helmet-async": "^1.3.0",
@@ -53,6 +55,7 @@
     "react-hot-toast": "^2.3.0",
     "react-i18next": "^11.18.5",
     "react-icons": "^4.10.1",
+    "react-moment": "^1.1.3",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
