--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.0",
+    "@tanstack/react-query": "^4.35.0",
+    "@tanstack/react-table": "^8.9.7",
     "@types/draft-js": "^0.11.12",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
@@ -40,6 +42,7 @@
     "draft-js": "^0.11.7",
     "esbuild-plugins-node-modules-polyfill": "^1.6.0",
     "framer-motion": "^10.16.2",
+    "i": "^0.3.7",
     "i18next": "^21.9.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
