--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/draft-js": "^0.11.12",
     "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-color": "^3.0.6",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-scroll": "^1.8.7",
     "@types/react-table": "^7.7.15",
