--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "moment": "^2.29.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
