--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
