--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "objecttoformdataconverter": "^1.0.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
