--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.34.2",
     "react-hot-toast": "^2.3.0",
+    "react-html-parser": "^2.0.2",
     "react-i18next": "^11.18.5",
     "react-icons": "^4.10.1",
     "react-moment": "^1.1.3",
@@ -68,10 +69,12 @@
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
+    "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "recharts": "^2.8.0",
     "rollup-plugin-polyfill-node": "^0.12.0",
     "styled-components": "^6.0.7",
+    "swiper": "^v9.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
