--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-scroll": "^1.8.7",
     "@types/react-table": "^7.7.15",
     "axios": "^1.4.0",
+    "clipboard": "^2.0.11",
     "draft-js": "^0.11.7",
     "esbuild-plugins-node-modules-polyfill": "^1.6.0",
     "framer-motion": "^10.16.2",
