--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "esbuild-plugins-node-modules-polyfill": "^1.6.0",
     "framer-motion": "^10.16.2",
     "html-react-parser": "^4.2.2",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
     "i18next": "^21.9.1",
     "js-cookie": "^3.0.5",
@@ -66,6 +67,7 @@
     "react-i18next": "^11.18.5",
     "react-icons": "^4.10.1",
     "react-moment": "^1.1.3",
+    "react-qr-code": "^2.0.12",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9",
